<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" android:padding="20dp">

        <Button
            android:id="@+id/btn_ble_scanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_scan_for_devices"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/btn_find_led_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_find_led_strip"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/btn_light_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_scan_for_beans"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/btn_scan_beacons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_scan_for_beacons"
            android:layout_margin="10dp" />
        <Button
            android:id="@+id/btn_range_beacons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_range_beacon"
            android:layout_margin="10dp" />
    </LinearLayout>
</RelativeLayout>
